Fixed library name

--- a/src/TraceAPI/CMakeLists.txt
+++ b/src/TraceAPI/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(boost)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # Configure TraceAPI static library
-set(TRACE_API_LIBRARY JSONSettings)
+set(TRACE_API_LIBRARY TraceAPI)
 file(GLOB_RECURSE TRACE_API_LIBRARY_SRC "*.cpp")
 file(GLOB_RECURSE TRACE_API_LIBRARY_HDR "*.h")
 add_library(${TRACE_API_LIBRARY} STATIC ${TRACE_API_LIBRARY_SRC} ${TRACE_API_LIBRARY_HDR})
