--- a/test/TraceAPITest/CMakeLists.txt
+++ b/test/TraceAPITest/CMakeLists.txt
@@ -6,15 +6,20 @@ enable_testing()
 # Add project folder into includes
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-# Find external dependencides
-find_package(gtest)
+# Find external dependencies
+set(GTEST_PACKAGE_NAME gtest)
+find_package(${GTEST_PACKAGE_NAME})
+if (NOT TARGET ${GTEST_PACKAGE_NAME}::${GTEST_PACKAGE_NAME})
+    set(GTEST_PACKAGE_NAME GTest)
+    find_package(${GTEST_PACKAGE_NAME})
+endif()
 
 # Configure test project
 set(TRACE_API_TEST_PROJECT TraceAPITest)
 file(GLOB_RECURSE TRACE_API_TEST_PROJECT_SRC "*.cpp")
 file(GLOB_RECURSE TRACE_API_TEST_PROJECT_HDR "*.h")
 add_executable(${TRACE_API_TEST_PROJECT} ${TRACE_API_TEST_PROJECT_SRC} ${TRACE_API_TEST_PROJECT_HDR})
-target_link_libraries(${TRACE_API_TEST_PROJECT} TraceAPI gtest::gtest)
+target_link_libraries(${TRACE_API_TEST_PROJECT} TraceAPI ${GTEST_PACKAGE_NAME}::${GTEST_PACKAGE_NAME})
 
 # Ignored missing PDBs link warning on Visual Studio
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
