--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,5 @@
 version: '0.0.{build}'
 
-image: Visual Studio 2017
-
 init:
   - ps: >-
       if($env:appveyor_repo_tag -eq 'True') {
@@ -13,21 +11,28 @@ configuration:
   - Release
 
 environment:
+  global:
+    PYTHON: "C:\\Python36"
+
   matrix:
-  - arch: x86
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    arch: x86_64
+    platform: x64
+    visual_studio: Visual Studio 16 2019
+    compiler_toolset: v142
+    boost: 1.71.0
+    gtest: 1.10.0
+
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    arch: x86
     platform: Win32
     visual_studio: Visual Studio 15 2017
+    compiler_toolset: v141
     boost: 1.66.0
     gtest: 1.7.0
 
-  - arch: x86_64
-    platform: x64
-    visual_studio: Visual Studio 15 2017 Win64
-    boost: 1.67.0
-    gtest: 1.8.1
-
 install:
-  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - "SET PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%"
   - pip.exe install conan
   - conan user
   - conan remote add systelab-bintray https://api.bintray.com/conan/systelab/conan
@@ -36,8 +41,8 @@ install:
 build_script:
   - md build
   - cd build
-  - conan install .. -s build_type=%CONFIGURATION% -s compiler.toolset=v141 -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
-  - cmake .. -G "%VISUAL_STUDIO%"
+  - conan install .. -s build_type=%CONFIGURATION% -s compiler.toolset=%COMPILER_TOOLSET% -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
+  - cmake .. -G "%VISUAL_STUDIO%" -A %PLATFORM%
   - msbuild TraceAPI.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
   - conan export-pkg ../conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=v141 -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
   - conan test ../test_package/conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=v141 -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
