--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,8 +44,8 @@ build_script:
   - conan install .. -s build_type=%CONFIGURATION% -s compiler.toolset=%COMPILER_TOOLSET% -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
   - cmake .. -G "%VISUAL_STUDIO%" -A %PLATFORM%
   - msbuild TraceAPI.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
-  - conan export-pkg ../conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=v141 -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
-  - conan test ../test_package/conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=v141 -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
+  - conan export-pkg ../conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=%COMPILER_TOOLSET% -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
+  - conan test ../test_package/conanfile.py TraceAPI/%APPVEYOR_BUILD_VERSION%@systelab/stable -s build_type=%CONFIGURATION% -s compiler.toolset=%COMPILER_TOOLSET% -s arch=%ARCH% -o boost=%BOOST% -o gtest=%GTEST%
 
 test_script:
   - ps: cd bin
