--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,4 @@ jobs:
         tag-name: 'v1.0.3'
         configuration-name: 'VisualStudio 2019 x64 Debug'
         ci-system: 'Appveyor'
-        job-id: 123456
+        job-id: 33338017
