Dummy changes on workflow to force the generation of docs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
         repo-name: cpp-trace-api
         library-name: 'TraceAPI'
         tag-name: 'v1.0.3'
-        configuration-name: 'VisualStudio 2019 x64 Debug'
-        ci-system: 'Appveyor'
+        configuration-name: 'VisualStudio.2019.x64.Debug'
+        ci-system: 'AppVeyor'
         job-id: 33338017
