Used real job identifier

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,4 @@ jobs:
         tag-name: 'v1.0.3'
         configuration-name: 'VisualStudio.2019.x64.Debug'
         ci-system: 'Appveyor'
-        job-id: 33338017
+        job-id: '5p6jv5cra0lubap8'
