--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -67,4 +67,4 @@ deploy_script:
       } else {
         echo "Not uploading because this is not a tag build"
       }
-  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh"'
+  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh -t $APPVEYOR_REPO_TAG_NAME -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE $PLATFORM $CONFIGURATION\" -j $APPVEYOR_JOB_ID"'
