--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -64,7 +64,8 @@ deploy_script:
   - ps: >- 
       if($env:appveyor_repo_tag -eq 'True') {
         conan upload TraceAPI/$env:appveyor_build_version@systelab/stable --all -r systelab-bintray --force
+        '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh -t $APPVEYOR_REPO_TAG_NAME -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE $PLATFORM $CONFIGURATION\" -j $APPVEYOR_JOB_ID"'
       } else {
         echo "Not uploading because this is not a tag build"
       }
-  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh -t $APPVEYOR_REPO_TAG_NAME -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE $PLATFORM $CONFIGURATION\" -j $APPVEYOR_JOB_ID"'
+
