--- a/.travis.yml
+++ b/.travis.yml
@@ -116,7 +116,7 @@ deploy:
       tags: true
       condition: "$BUILD_TYPE != Coverage"
   - provider: script
-    script: bash ./build_docs.sh -t "${TRAVIS_TAG}" -c "Travis" -n "${COMPILER} ${BUILD_TYPE}" -j "${TRAVIS_JOB_ID}"
+    script: bash ./build_docs.sh -t "${TRAVIS_TAG}" -c "Travis" -n "${TRAVIS_COMPILER} ${BUILD_TYPE}" -j "${TRAVIS_JOB_ID}"
     skip_cleanup: true
     on:
       tags: true
