--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
           - gcc-7
           - g++-7
     env:
+      - COMPILER_NAME=gcc-7
       - BUILD_TYPE=Release
       - CONAN_BUILD_TYPE=Release
       - COMPILER_LIBCXX=libstdc++11
@@ -30,6 +31,7 @@ matrix:
           - gcc-7
           - g++-7
     env:
+      - COMPILER_NAME=gcc-7
       - BUILD_TYPE=Debug
       - CONAN_BUILD_TYPE=Debug
       - COMPILER_LIBCXX=libstdc++11
@@ -48,6 +50,7 @@ matrix:
           - gcc-7
           - g++-7
     env:
+      - COMPILER_NAME=gcc-7
       - BUILD_TYPE=Coverage
       - CONAN_BUILD_TYPE=Debug
       - COMPILER_LIBCXX=libstdc++11
@@ -59,6 +62,7 @@ matrix:
     language: cpp
     compiler: clang   
     env:
+      - COMPILER_NAME=clang-MacOS
       - BUILD_TYPE=Release
       - CONAN_BUILD_TYPE=Release
       - COMPILER_LIBCXX=libc++
@@ -116,7 +120,7 @@ deploy:
       tags: true
       condition: "$BUILD_TYPE != Coverage"
   - provider: script
-    script: bash ./build_docs.sh -t "${TRAVIS_TAG}" -c "Travis" -n "${TRAVIS_COMPILER} ${BUILD_TYPE}" -j "${TRAVIS_JOB_ID}"
+    script: bash ./build_docs.sh -t "${TRAVIS_TAG}" -c "Travis" -n "${COMPILER_NAME} ${BUILD_TYPE}" -j "${TRAVIS_JOB_ID}"
     skip_cleanup: true
     on:
       tags: true
