--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,10 +51,10 @@ build_script:
 test_script:
   - ps: cd bin
   - ps: cd $env:CONFIGURATION
-  - TraceAPITest.exe --gtest_output=xml:TraceAPITest.xml
+  - TraceAPITest.exe --gtest_output=../xml:TraceAPITest.xml
 
 after_test:
-  - ps: (new-object net.webclient).UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TraceAPITest.xml))
+  - ps: (new-object net.webclient).UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path ..\TraceAPITest.xml))
 
 artifacts:
   - path: 'build\lib\%CONFIGURATION%\TraceAPI.lib'
@@ -67,4 +67,4 @@ deploy_script:
       } else {
         echo "Not uploading because this is not a tag build"
       }
-  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh -t \"$APPVEYOR_REPO_TAG_NAME\" -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE %PLATFORM% %CONFIGURATION%\" -j $APPVEYOR_JOB_ID"'
+  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./build_docs.sh -o \"systelab" -s \"cpp-trace-api" -t \"$APPVEYOR_REPO_TAG_NAME\" -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE %PLATFORM% %CONFIGURATION%\" -j $APPVEYOR_JOB_ID" -p \"TraceAPITest\"'
