--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,5 +61,10 @@ artifacts:
     name: TraceAPI.lib
 
 deploy_script:
-  - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./ci/deploy.sh -v $APPVEYOR_BUILD_VERSION'
+  - ps: >- 
+      if($env:appveyor_repo_tag -eq 'True') {
+        conan upload TraceAPI/$env:appveyor_build_version@systelab/stable --all -r systelab-bintray --force
+      } else {
+        echo "Not uploading because this is not a tag build"
+      }
   - '%CYG_ROOT%/bin/bash -lc "cd $APPVEYOR_BUILD_FOLDER; ./ci/build_docs.sh -o \"systelab\" -s \"cpp-trace-api\" -t \"$APPVEYOR_REPO_TAG_NAME\" -c AppVeyor -n \"$APPVEYOR_BUILD_WORKER_IMAGE %PLATFORM% %CONFIGURATION%\" -j \"$APPVEYOR_JOB_ID\" -p \"TraceAPITest\"'
