Logged the path of the sed version used on MacOs config

--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ install:
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install conan; fi
   - if [ $TRAVIS_OS_NAME == osx }; then brew install gnu-sed; fi
   - if [ $TRAVIS_OS_NAME == osx }; then export PATH="/usr/local/opt/gnu-sed/libexec/gnubin:$PATH"; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then which sed; fi
   - conan user
   - conan remote add systelab-bintray https://api.bintray.com/conan/systelab/conan
   - conan --version
