--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ install:
   - if [ $TRAVIS_OS_NAME == osx ]; then export PATH="/usr/local/opt/gnu-sed/libexec/gnubin:$PATH"; fi
   - if [ $TRAVIS_OS_NAME == osx ]; then which sed; fi
   - conan user
-  - conan remote add systelab-bintray https://api.bintray.com/conan/systelab/conan
+  - conan remote add systelab-public https://systelab.jfrog.io/artifactory/api/conan/cpp-conan-production-local
   - conan --version
 
 script:
