--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ matrix:
       - GTEST_VERSION=1.8.1
 
   - os: osx
-    osx_image: xcode11.6
+    osx_image: xcode12.2
     language: cpp
     compiler: clang   
     env:
@@ -67,7 +67,10 @@ matrix:
       - CONAN_BUILD_TYPE=Release
       - COMPILER_LIBCXX=libc++
       - GTEST_VERSION=1.8.1
-      - BOOST_VERSION=1.72.0
+      - BOOST_VERSION=1.75.0
+    cache:
+      directories:
+        - $HOME/Library/Caches/Homebrew
 
 install: 
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90; fi
