Improved cache handling for MacOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ matrix:
     cache:
       directories:
         - $HOME/Library/Caches/Homebrew
+        - /usr/local/Homebrew
 
 install: 
   - if [ $TRAVIS_OS_NAME == linux ]; then sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 90; fi
